@@ -2,6 +2,7 @@ package gov.uk.courtdata.prosecutionconcluded.service;
 
 import gov.uk.courtdata.entity.WQHearingEntity;
 import gov.uk.courtdata.enums.JurisdictionType;
+import gov.uk.courtdata.model.Metadata;
 import gov.uk.courtdata.prosecutionconcluded.builder.CaseConclusionDTOBuilder;
 import gov.uk.courtdata.prosecutionconcluded.dto.ConcludedDTO;
 import gov.uk.courtdata.prosecutionconcluded.helper.CalculateOutcomeHelper;
@@ -12,14 +13,12 @@ import gov.uk.courtdata.prosecutionconcluded.model.OffenceSummary;
 import gov.uk.courtdata.prosecutionconcluded.model.Plea;
 import gov.uk.courtdata.prosecutionconcluded.model.ProsecutionConcluded;
 import gov.uk.courtdata.prosecutionconcluded.validator.ProsecutionConcludedValidator;
-import gov.uk.courtdata.repository.WQHearingRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -35,9 +34,6 @@ public class ProsecutionConcludedServiceTest {
 
     @Mock
     private CalculateOutcomeHelper calculateOutcomeHelper;
-
-    @Mock
-    private WQHearingRepository wqHearingRepository;
 
     @Mock
     private ProsecutionConcludedValidator prosecutionConcludedValidator;
@@ -57,12 +53,14 @@ public class ProsecutionConcludedServiceTest {
     @Mock
     private ProsecutionConcludedDataService prosecutionConcludedDataService;
 
+    @Mock
+    private HearingsService hearingsService;
+
 
     @Test
     public void test_whenMaatIsLocked_thenPublishMessageToSQS() {
 
-        when(wqHearingRepository.findByMaatIdAndHearingUUID(any(), any()))
-                .thenReturn(getWQHearingEntity());
+        when(hearingsService.retrieveHearingForCaseConclusion(any())).thenReturn(getWQHearingEntity());
 
         when(reservationsRepositoryHelper.isMaatRecordLocked(any())).thenReturn(true);
 
@@ -70,7 +68,7 @@ public class ProsecutionConcludedServiceTest {
 
         //then
         verify(prosecutionConcludedValidator).validateRequestObject(any());
-        verify(wqHearingRepository, atLeast(1)).findByMaatIdAndHearingUUID(anyInt(), any());
+        verify(hearingsService, atLeast(1)).retrieveHearingForCaseConclusion(any());
         verify(prosecutionConcludedDataService, atLeast(1)).execute( any());
         verify(reservationsRepositoryHelper, atLeast(1)).isMaatRecordLocked(anyInt());
         verify(prosecutionConcludedImpl, never()).execute(any());
@@ -83,8 +81,8 @@ public class ProsecutionConcludedServiceTest {
     @Test
     public void test_whenMultipleProsecutionMessagesAndFlagIsFalseOrTrue_thenProcessingValidOnly() {
 
-        when(wqHearingRepository.findByMaatIdAndHearingUUID(any(), any()))
-                .thenReturn(getWQHearingEntity());
+        when(hearingsService.retrieveHearingForCaseConclusion(any())).thenReturn(getWQHearingEntity());
+
 
         when(reservationsRepositoryHelper.isMaatRecordLocked(any())).thenReturn(false);
         when(offenceHelper.getTrialOffences(any(),anyInt())).thenReturn(List.of(getOffenceSummary("123")));
@@ -93,7 +91,7 @@ public class ProsecutionConcludedServiceTest {
 
         //then
         verify(prosecutionConcludedValidator).validateRequestObject(any());
-        verify(wqHearingRepository, atLeast(1)).findByMaatIdAndHearingUUID(anyInt(), any());
+        verify(hearingsService, atLeast(1)).retrieveHearingForCaseConclusion(any());
         verify(reservationsRepositoryHelper, atLeast(1)).isMaatRecordLocked(anyInt());
         verify(prosecutionConcludedImpl, atLeast(1)).execute(any());
         verify(calculateOutcomeHelper, atLeast(1)).calculate(any());
@@ -105,8 +103,7 @@ public class ProsecutionConcludedServiceTest {
     @Test
     public void test_whenOffenceSummaryListIsEmpty_thenProcess() {
 
-        when(wqHearingRepository.findByMaatIdAndHearingUUID(any(), any()))
-                .thenReturn(getWQHearingEntity());
+        when(hearingsService.retrieveHearingForCaseConclusion(any())).thenReturn(getWQHearingEntity());
 
         when(reservationsRepositoryHelper.isMaatRecordLocked(any())).thenReturn(false);
         when(offenceHelper.getTrialOffences(any(),anyInt())).thenReturn(List.of(getOffenceSummary("123")));
@@ -115,7 +112,7 @@ public class ProsecutionConcludedServiceTest {
 
         //then
         verify(prosecutionConcludedValidator).validateRequestObject(any());
-        verify(wqHearingRepository, atLeast(1)).findByMaatIdAndHearingUUID(anyInt(), any());
+        verify(hearingsService, atLeast(1)).retrieveHearingForCaseConclusion(any());
         verify(reservationsRepositoryHelper).isMaatRecordLocked(anyInt());
         // verify(prosecutionConcludedImpl,never()).execute(any());
         verify(calculateOutcomeHelper).calculate(any());
@@ -129,8 +126,7 @@ public class ProsecutionConcludedServiceTest {
         ProsecutionConcluded prosecutionConcludedRequest = getProsecutionConcluded();
 
         //when
-        when(wqHearingRepository.findByMaatIdAndHearingUUID(any(), any()))
-                .thenReturn(getWQHearingEntity());
+        when(hearingsService.retrieveHearingForCaseConclusion(any())).thenReturn(getWQHearingEntity());
 
         when(reservationsRepositoryHelper.isMaatRecordLocked(any())).thenReturn(false);
         when(offenceHelper.getTrialOffences(any(),anyInt())).thenReturn(List.of(getOffenceSummary("123")));
@@ -138,13 +134,11 @@ public class ProsecutionConcludedServiceTest {
         prosecutionConcludedService.execute(prosecutionConcludedRequest);
 
         //then
-        verify(wqHearingRepository).findByMaatIdAndHearingUUID(anyInt(), any());
+        verify(hearingsService, atLeast(1)).retrieveHearingForCaseConclusion(any());
         verify(prosecutionConcludedValidator).validateRequestObject(any());
         verify(reservationsRepositoryHelper).isMaatRecordLocked(anyInt());
         verify(prosecutionConcludedImpl).execute(any());
         verify(calculateOutcomeHelper).calculate(any());
-
-
     }
 
     @Test
@@ -154,31 +148,45 @@ public class ProsecutionConcludedServiceTest {
         ProsecutionConcluded prosecutionConcludedRequest = getProsecutionConcluded();
 
         //when
-        when(wqHearingRepository.findByMaatIdAndHearingUUID(any(), any()))
-                .thenReturn(Arrays.asList(
-                                WQHearingEntity.builder()
-                                        .wqJurisdictionType(JurisdictionType.MAGISTRATES.name())
-                                        .build()));
+        when(hearingsService.retrieveHearingForCaseConclusion(any()))
+                .thenReturn(WQHearingEntity.builder().wqJurisdictionType(JurisdictionType.MAGISTRATES.name()).build());
 
         prosecutionConcludedService.execute(prosecutionConcludedRequest);
 
         //then
 
-        verify(wqHearingRepository).findByMaatIdAndHearingUUID(anyInt(), any());
+        verify(hearingsService, atLeast(1)).retrieveHearingForCaseConclusion(any());
         verify(prosecutionConcludedValidator).validateRequestObject(any(ProsecutionConcluded.class));
         verify(reservationsRepositoryHelper, never()).isMaatRecordLocked(anyInt());
 
         verify(prosecutionConcludedImpl, never()).execute(any(ConcludedDTO.class));
     }
 
+    @Test
+    public void givenMessageIsReceived_whenHearingDataNotInMaat_thenTriggerHearingProcessingViaCda() {
+
+        when(hearingsService.retrieveHearingForCaseConclusion(any())).thenReturn(null);
+
+        prosecutionConcludedService.execute(getProsecutionConcluded());
+
+        verify(prosecutionConcludedValidator).validateRequestObject(any());
+        verify(hearingsService, atLeast(1)).retrieveHearingForCaseConclusion(any());
+        verify(prosecutionConcludedDataService, atLeast(1)).execute( any());
+        verify(reservationsRepositoryHelper, never()).isMaatRecordLocked(anyInt());
+        verify(prosecutionConcludedImpl, never()).execute(any());
+        verify(calculateOutcomeHelper, never()).calculate(any());
+        verify(caseConclusionDTOBuilder, never()).build(any(), any(), any());
+        verify(offenceHelper, never()).getTrialOffences(any(),anyInt());
+    }
 
     private ProsecutionConcluded getProsecutionConcluded() {
         return ProsecutionConcluded.builder()
                 .isConcluded(true)
                 .maatId(1221)
-                .offenceSummary(Arrays.asList(getOffenceSummary("OF121")))
+                .offenceSummary(List.of(getOffenceSummary("OF121")))
                 .prosecutionCaseId(UUID.fromString("ce60cac9-ab22-468e-8af9-a3ba2ecece5b"))
                 .hearingIdWhereChangeOccurred(UUID.fromString("ce60cac9-ab22-468e-8af9-a3ba2ecece5b"))
+                .metadata(Metadata.builder().laaTransactionId(UUID.randomUUID().toString()).build())
                 .build();
     }
 
@@ -192,11 +200,9 @@ public class ProsecutionConcludedServiceTest {
                 .build();
     }
 
-    private List<WQHearingEntity> getWQHearingEntity() {
+    private WQHearingEntity getWQHearingEntity() {
 
-        return List
-                .of(
-                        WQHearingEntity.builder()
+        return WQHearingEntity.builder()
                                 .maatId(1212111)
                                 .caseId(1234)
                                 .caseUrn("CaseUR")
@@ -204,7 +210,6 @@ public class ProsecutionConcludedServiceTest {
                                 .ouCourtLocation("OU")
                                 .hearingUUID("ce60cac9-ab22-468e-8af9-a3ba2ecece5b")
                                 .wqJurisdictionType(JurisdictionType.CROWN.name())
-                                .build()
-                );
+                                .build();
     }
 }
